syntax = "proto3";

package common;

option go_package = "github.com/hyperledger/fabric-protos-go/common";
option java_package = "org.hyperledger.fabric.protos.common";

message chamhash {
  bytes HashValue = 1;
  bytes RandomValue = 2;
  bytes Etdcipher = 3;
}
